--- a/slides/2018/08-aug/index.pug
+++ b/slides/2018/08-aug/index.pug
@@ -379,8 +379,7 @@ html
 
     //----------------------  Fin  ----------------------
     
-    se
-    ction.slide
+    section.slide
       h2 Thanks!
       h3
         a(href='https://edgeatx.org/slides/') https://edgeATX.org/slides
