--- a/slides/2018/07-jul/index.pug
+++ b/slides/2018/07-jul/index.pug
@@ -332,8 +332,7 @@ html
 
     //----------------------  Fin  ----------------------
     
-    se
-    ction.slide
+    section.slide
       h2 Thanks!
       h3
         a(href='https://edgeatx.org/slides/') https://edgeATX.org/slides
