--- a/slides/2019/02-feb/index.pug
+++ b/slides/2019/02-feb/index.pug
@@ -75,12 +75,26 @@ html
       .shim(style='background-color:#555;opacity:.5;')
     
     section.slide.cover(style='background:#fff;')
-      p(style='color: #555;') Thanks to our sponsor:
+      p(style='color: #555;') Thanks to our premiere sponsor:
       div(style='text-align:center;padding-top:150px;font-size:200%;')
         p
           a(href='https://homeaway.com')
             img(style='min-width:70%', src='../../shared/resources/images/sponsors/homeaway.png', alt='HomeAway')
     
+    section.slide
+      h2 Swag by Linkerd
+      blockquote A service mesh for Kubernetes and beyond
+      ul
+        li Find Linkerd on 
+          a(href='https://github.com/linkerd') GitHub
+        li Join the 
+          a(href='https://slack.linkerd.io/') Linkerd Slack 
+          |  (2500+ users)
+        li Join the 
+          a(href='https://lists.cncf.io/g/cncf-linkerd-users') mailing list
+      img(src='./images/linkerd-logo.png', style='min-width:400px', alt='Linkerd')
+
+
     //- section.slide.cover(style='background-image:url(./images/cloudflare-stickers.jpg)')
     //-   p(style='color: #fff;') Thanks to our sponsor:
     
